# ioload

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  install.sh  ioload.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: EXAMPLES.md  INSTALL.md  README.md  ROADMAP.md
scripts/: README.md  install.ps1  install.sh
tests/: __init__.py
